# server/controllers/userCtrl.js
@@ -113,7 +113,7 @@ const userCtrl = {
   },
   getUser: async (req, res) => {
     /*
-        #swagger.tags = ['Auth']
+        #swagger.tags = ['Users']
         #swagger.security = [{
             "Authorization": []
         }]
@@ -123,6 +123,29 @@ const userCtrl = {
       if (!user) return res.status(400).json({ msg: 'User does not exist.' });
 
       res.json(user);
+    } catch (err) {
+      return res.status(500).json({ msg: err.message });
+    }
+  },
+  addCart: async (req, res) => {
+    /*
+        #swagger.tags = ['Users']
+        #swagger.security = [{
+            "Authorization": []
+        }]
+    */
+    try {
+      const user = await Users.findById(req.user.id);
+      if (!user) return res.status(400).json({ msg: 'User does not exist.' });
+
+      await Users.findOneAndUpdate(
+        { _id: req.user.id },
+        {
+          cart: req.body.cart,
+        }
+      );
+
+      return res.json({ msg: 'Added to cart' });
     } catch (err) {
       return res.status(500).json({ msg: err.message });
     }
