# server/routes/userRouter.js
@@ -7,6 +7,7 @@ router.post('/login', userCtrl.login);
 router.get('/logout', userCtrl.logout);
 router.get('/refresh_token', userCtrl.refreshToken);
 router.get('/infor', auth, userCtrl.getUser);
+router.patch('/addcart', auth, userCtrl.addCart)
 
 
 module.exports = router;
